Fix dark mode and edited program page loading

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -28,6 +28,8 @@
         .noinvert,
         .ck-editor__main, .dt-button-background, .dataTable {
             filter: invert(100%);
+        }
+        .dataTable {
             color: white;
         }
         .dt-input {
